# 1130test

./: .gitignore  AI_ASSISTANT_README.md  AMAP_CONFIG.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
data/: cultural_heritage.sqlite
docs/: API.md  PROJECT_STRUCTURE.md  WINDOWS_BUILD.md
public/3DModels/: chinese_vase.glb
public/images/: README.md
scripts/: cleanup_images.sh  setup.sh
src/: App.css  App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: error.rs  main.rs
src-tauri/src/api/: ai.rs  artifacts.rs  auth.rs  history.rs  mod.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_add_more_artifacts.sql  003_create_browsing_history.sql  mod.rs
src/components/: AIAssistant.tsx  MapExploration.tsx  ThreeDArtifacts.tsx
src/components/artifacts/: ArtifactCard.tsx  ArtifactDialog.tsx  ArtifactGrid.tsx  CompactArtifactCard.tsx  GuideCard.tsx  NewsCard.tsx  TopicsCard.tsx  TrendingCard.tsx
src/components/auth/: LoginDialog.tsx
src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
src/components/map/: MapComponent.css  MapComponent.tsx
src/components/ui/: sidebar.tsx
src/hooks/: useArtifacts.ts
src/lib/: api.ts  utils.ts
src/pages/: AboutPage.tsx  AdminPage.tsx  BrowsingHistoryPage.tsx  FavoritesPage.tsx  HomePage.tsx  MapPage.tsx  SettingsPage.tsx
src/router/: index.tsx
src/types/: index.ts  tauri.d.ts
